ferritin/src/snapshots/ferritin__tests__get_trait_assoc_type_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::TestTrait::T\"), &\nget_fixture_crate_path ())"
---
{
  "canonicalUrl": "https://docs.rs/fixture-crate/0.1.0/fixture-crate/trait.TestTrait.html#associatedtype.T",
  "meta": {
    "name": "T",
    "kind": "assoctype",
    "visibility": "private",
    "crateName": "fixture-crate",
    "crateVersion": "0.1.0"
  },
  "docs": [
    {
      "type": "truncatedBlock",
      "nodes": [
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "trait associated type",
              "style": "Plain"
            }
          ]
        }
      ],
      "level": "Full"
    }
  ],
  "body": {
    "kind": "assocItem",
    "assocKind": "type",
    "name": "T",
    "signature": [
      {
        "text": "type",
        "style": "Keyword"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "T",
        "style": "TypeName"
      },
      {
        "text": ":",
        "style": "Punctuation"
      },
      {
        "text": " ",
        "style": "Plain"
      },
      {
        "text": "Clone",
        "style": "TypeName",
        "url": "http://docs.rust-lang.org/nightly/core/clone/trait.Clone.html",
        "path": "core::clone::Clone"
      },
      {
        "text": ";",
        "style": "Punctuation"
      }
    ]
  }
}
