ferritin/src/snapshots/ferritin__tests__get_trait_assoc_type_test_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestTrait::T\"), OutputMode ::\nTestMode, & get_fixture_crate_path ())"
---
<metadata>
  <field name="Item">T</field>
  <field name="Kind">AssocType</field>
  <field name="Visibility">Private</field>
</metadata>
<truncated level="full"><p>
trait associated type</p>
</truncated>
<generated-code>
<keyword>type</keyword> <type-name>T</type-name><punctuation>:</punctuation> <type-name>Clone</type-name><punctuation>;</punctuation></generated-code>
